tests/valid_inputs/true_is_one.cpp
// test that 'true' is converted to int(1)


int main() {
	bool b = true;
	return b;
}
