tests/invalid_inputs/parsing/nullptr_t_declaration.cpp
// test that the user doesn't have access to nullptr_t

int main() {
	nullptr_t n;
}
